Add comprehensive unit tests, Cucumber BDD framework, and fix @Transactional rollback
- Add unit tests for 7 new database-driven workflow services
- Integrate Cucumber framework with BDD feature files and step definitions
- Refactor integration tests to use Testcontainers PostgreSQL
- Remove @Transactional rollback behavior with @DirtiesContext
- Fix JPA mapping issues for JSONB fields with @Type(JsonType.class)
- Add comprehensive test coverage for dynamic workflow loading, role-based assignment, and versioning
- Create DatabaseDrivenWorkflowIntegrationTest for end-to-end testing

Co-Authored-By: Siva Kandaswamy <sivaswamynatha@gmail.com>